Try and fix share button spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -13,9 +13,7 @@ body
   display: grid;
   grid-template-rows: 20px 1fr 40px 40px;
   grid-template-columns: 20px 1fr 20px;
-  min-width: 100%;
-  min-height: 100%;
-  position: absolute;
+
 
 
 // Helper Classes
